--- a/apps/dashboard/src/app/account/billing/my-subscription/my-subscription.component.html
+++ b/apps/dashboard/src/app/account/billing/my-subscription/my-subscription.component.html
@@ -7,7 +7,7 @@
       *ngIf="prices$ | async as prices">
       <div class="subscription-tier">
         <div class="title-l">{{ 'account.type.' + (type | async) | translate }}</div>
-        <div>
+        <div *ngIf="prices.recurring">
           <span
             class="title-l price"
             *ngIf="currency$ | async as currency">
