--- a/apps/dashboard/src/app/account/billing/my-subscription/my-subscription.component.html
+++ b/apps/dashboard/src/app/account/billing/my-subscription/my-subscription.component.html
@@ -29,7 +29,11 @@
             <span class="body-m">{{ 'billing.quotas.kbs' | translate }}</span>
           </pa-table-cell>
           <pa-table-cell>
-            <span class="body-m">{{ (defaults | async)?.max_kbs || '' }}</span>
+            <span
+              class="body-m"
+              *ngIf="(defaults | async)?.max_kbs as maxKbs">
+              {{ maxKbs === -1 ? ('billing.unlimited' | translate) : maxKbs }}
+            </span>
           </pa-table-cell>
           <pa-table-cell>-</pa-table-cell>
         </pa-table-row>
