[sc-7290] Remove upgrade block for some account types

--- a/apps/dashboard/src/app/account/account-home/account-home.component.html
+++ b/apps/dashboard/src/app/account/account-home/account-home.component.html
@@ -106,7 +106,7 @@
     </div>
 
     <div class="right-column">
-      <div>
+      <div *ngIf="canUpgrade | async">
         <app-account-status></app-account-status>
       </div>
       <div>
