display link to dashboard when no labels

--- a/apps/desktop/src/app/upload/settings/settings.component.html
+++ b/apps/desktop/src/app/upload/settings/settings.component.html
@@ -103,10 +103,17 @@
       </pa-button>
     </div>
     <div
-      *ngIf="showLabels"
+      *ngIf="(hasLabelSets | async) === true"
       class="field">
       <div class="body-m">{{ 'upload.labels' | translate }}</div>
       <app-label-field [(selection)]="selectedLabels"></app-label-field>
+    </div>
+    <div
+      *ngIf="(hasLabelSets | async) === false"
+      class="field">
+      <div
+        class="body-m"
+        [innerHTML]="'upload.no-labels' | translate: { url: dashboardUrl }"></div>
     </div>
   </div>
 
