Fix [sc-7292]: fix user deletion button

--- a/apps/dashboard/src/app/knowledge-box/knowledge-box-users/users-manage/users-manage.component.html
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box-users/users-manage/users-manage.component.html
@@ -103,7 +103,9 @@
           aspect="basic"
           icon="trash"
           size="small"
-          [disabled]="(userCount | async) || 0 < 2 || (user.role === 'SOWNER' && (hasSeveralOwners | async) === false)"
+          [disabled]="
+            ((userCount | async) || 0) < 2 || (user.role === 'SOWNER' && (hasSeveralOwners | async) === false)
+          "
           (click)="deleteUser(user)">
           {{ 'generic.delete' | translate }}
         </pa-button>
