Add a cypress marker to back to resource button

--- a/libs/common/src/lib/resources/edit-resource/edit-resource.component.html
+++ b/libs/common/src/lib/resources/edit-resource/edit-resource.component.html
@@ -5,6 +5,7 @@
       icon="chevron-left"
       aspect="basic"
       size="small"
+      data-cy="back-to-resources"
       (click)="backToResources()">
       {{ 'resource.resources' | translate }}
     </pa-button>
