Fix resource classification loading
- add missing mark for check
- add isReady subject to resource classification page
- refactor labelField component to return hasLabel instead of noLabel
- refactor LabelsService replacing `getLabelsByKind` method by two properties: `resourceLabelSets` and `paragraphLabelSets` which emit only when labelSet is not null
- Fix tests (prevent error to be triggered and logged during unit tests)

--- a/libs/common/src/lib/label/label-field/label-field.component.html
+++ b/libs/common/src/lib/label/label-field/label-field.component.html
@@ -1,5 +1,5 @@
 <div
-  *ngIf="hasLabels | async"
+  *ngIf="hasLabels$ | async"
   class="label-field"
   [class.small-button]="size === 'small'">
   <app-label-dropdown
