[sc-7149] Update icons displayed in resource list

--- a/libs/common/src/lib/resources/resource-list/pending-resources-table/pending-resources-table.component.html
+++ b/libs/common/src/lib/resources/resource-list/pending-resources-table/pending-resources-table.component.html
@@ -68,7 +68,7 @@
           <div class="title-with-icon">
             <pa-icon
               *ngIf="row.resource.icon | mimeIcon as icon"
-              [path]="'assets/mime-icons/' + icon"></pa-icon>
+              [name]="icon"></pa-icon>
             <div class="title-and-description">
               <div class="body-s">{{ row.resource.title }}</div>
               <small *ngIf="row.description">{{ row.description }}</small>
