--- a/libs/common/src/lib/resources/resource-list/processed-resource-table/processed-resource-table.component.html
+++ b/libs/common/src/lib/resources/resource-list/processed-resource-table/processed-resource-table.component.html
@@ -155,7 +155,7 @@
             <div class="title-with-icon">
               <pa-icon
                 *ngIf="row.resource.icon | mimeIcon as icon"
-                [path]="'assets/mime-icons/' + icon"></pa-icon>
+                [name]="icon"></pa-icon>
               <div class="title-and-description">
                 <div
                   class="body-s"
