[sc-6693] Update thumbnail flow
- remove radio buttons when several thumbnails
- highlight selected thumbnail with a border
- don't save thumbnail until user clicks on save
- add ability to delete unselected thumbnails

--- a/libs/common/src/lib/resources/edit-resource/_edit-resource.tokens.scss
+++ b/libs/common/src/lib/resources/edit-resource/_edit-resource.tokens.scss
@@ -16,3 +16,6 @@ $footer-separator: inset 0 1px 0 $color-neutral-light;
 
 $annotation-header-height: rhythm(9);
 $spacing-top: rhythm(1);
+
+$thumbnail-height: rhythm(10);
+$thumbnail-width: rhythm(17);
