--- a/libs/sistema/theme/tokens/_spacing.tokens.scss
+++ b/libs/sistema/theme/tokens/_spacing.tokens.scss
@@ -22,6 +22,7 @@ $rhythm: (
   14: ($spacer * 14),     //  14   unit - 112px -  7     rem
   15: ($spacer * 15),     //  15   unit - 120px -  7.5   rem
   16: ($spacer * 16),     //  16   unit - 128px -  8     rem
+  17: ($spacer * 17),     //  17   unit - 136px -  8.5   rem
   20: ($spacer * 20),     //  20   unit - 160px - 10     rem
   22: ($spacer * 22),     //  22   unit - 176px - 11     rem
   24: ($spacer * 24),     //  24   unit - 192px - 12     rem
