[sc-7467] Capitalize Knowledge Boxes

--- a/apps/manager-v2/src/app/manage-accounts/account-details/knowledge-boxes/knowledge-boxes.component.html
+++ b/apps/manager-v2/src/app/manage-accounts/account-details/knowledge-boxes/knowledge-boxes.component.html
@@ -1,4 +1,4 @@
-<h3>Knowledge boxes</h3>
+<h3>Knowledge Boxes</h3>
 <pa-table columns="2fr repeat(2, 1fr) 96px">
   <pa-table-header>
     <pa-table-cell header>Id</pa-table-cell>
